# database-chatbot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
.streamlit/: config.toml
docs/: architecture.mmd
prompts/: conversation_query.txt  database_chat.txt
scripts/: download_northwind_database.sh
src/: app.py  database_chatbot.py  models.py  utils.py
tests/: test_pipeline.py
